<resources>
    <string name="app_name">Spochan</string>
    <string name="app_country">Russia</string>


    <string name="set_email">Неверно введен E-mail</string>
    <string name="email">E-mail</string>
    <string name="set_first_name">Введите ваше имя</string>
    <string name="first_name_in_log">Ваше имя</string>
    <string name="set_second_name">Введите вашу фамилию</string>
    <string name="second_name_in_log">Ваша фамилия</string>
    <string name="set_password">Введите пароль</string>
    <string name="password">Пароль</string>
    <string name="change_password">Изменить пароль</string>
    <string name="text_password">Письмо со ссылкой на изменение пароля было отправлено на вашу почту</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="set_director_password">Введите пароль администратора</string>
    <string name="director_password">Пароль администратора</string>
    <string name="wrong_director_password">Неправильный пароль администратора</string>
    <string name="normal_password_length">Пароль должен содержать минимум 6 символов</string>
    <string name="password_match">Пароли должны совпадать</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="load_your_image">Загрузить изображение</string>
    <string name="load_successful">Изображение успешно загружено</string>
    <string name="load_fail">Ошибка: изображение не загружено</string>
    <string name="update_for_60_seconds">Обновление может занять до 60 секунд</string>
    <string name="please_load_your_image">и загрузите изображение</string>
    <string name="load_complete">Успешно</string>
    <string name="first_name">Имя пользователя</string>
    <string name="second_name">Фамилия</string>
    <string name="sex">Пол</string>
    <string name="born_date">Дата рождения</string>
    <string name="user_club">Клуб</string>
    <string name="user_group">Категория</string>
    <string name="user_certification">Аттестация</string>
    <string name="not_indicated">Не указано</string>
    <string name="continue_as_director">Продолжить как администратор</string>
    <string name="continue_as_sportsman">Продолжить как спортсмен</string>
    <string name="you_are_director">Вы в режиме администратора</string>
    <string name="you_are_sportsman">Вы в режиме спортсмена</string>
    <string name="edit_activity">Редактирование</string>
    <string name="edit_notification">Сначала завершите редактирование</string>
    <string name="delete_successful">Элемент удален</string>
    <string name="delete_fail">Ошибка, попробуйте еще раз</string>
    <string name="confirm_delete">Подтвердите удаление</string>
    <string name="choose_action">Выберите действие</string>
    <string name="delete">Удалить</string>
    <string name="edit">Редактировать</string>
    <string name="filter">Фильтрация</string>
    <string name="successful">Успешно</string>
    <string name="enter">Войти</string>
    <string name="register">  Регистрирация </string>
    <string name="no_account">Еще нет аккаунта?</string>
    <string name="have_account">Уже есть аккаунт?</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="input_email">Введите ваш email</string>
    <string name="glad_to_see_you_again">Рады снова вас видеть</string>
    <string name="welcome">Добро Пожаловать</string>
    <string name="cancel">Отмена</string>
    <string name="save">Сохранить</string>
    <string name="ok">OK</string>
    <string name="push">Отправить </string>
    <string name="wait">Ожидайте…</string>
    <string name="change_image">Заменить изображение</string>
    <string name="user_points">Кол-во баллов: </string>
    <string name="fill_your_profile">Сначала перейдите в раздел "Мой аккаунт" и заполните всю информацию о себе </string>
    <string name="dont_edit_title">Не редактируйте заголовок соревнований, пока включена регистрация, так как это приведет к раздвоению базы данных и часть пользователей будет зарегистрирована в базе по старому названию, а часть по новой. Сначала отредактируйте все поля, сохраните и только потом включайте регистрацию на мероприятие </string>
    <string name="reg_list">Список зарегестрировавшихся </string>
    <string name="put_data">Сначала введите имя и фамилию спортсмена </string>
    <string name="open_reg_list">Открыть список зарегестрировавшихся </string>
    <string name="choose_your_group">Выберите группу для участия </string>
    <string name="fields_notification">Сначала заполните все поля</string>
    <string name="help_email">Введите ваше сообщение тут…</string>
    <string name="settings">Настройки</string>
    <string name="language">Выбрать язык</string>
    <string name="user_city">Город спортсмена</string>
    <string name="result">Всего: </string>
    <string name="result2">Всего </string>
    <string name="comeOnButton">Пришел </string>
    <string name="comeOnButton2">Пришли </string>
    <string name="payButton">Оплатил </string>
    <string name="payButton2">Оплатили </string>
    <string name="wrongSportsman">У вас нет права редактировать данного спортсмена </string>
    <string name="notAllowed">У вас нет права редактировать данную информацию </string>

    <string name="title_exception">Введите значение заголовка</string>
    <string name="days_exception">Дни должны содержать 2 символа</string>
    <string name="months_exception">Месяц должен содержать 2 символа</string>
    <string name="years_exception">Год должен содержать 4 символа</string>
    <string name="date_format_exception">Формат даты неверный</string>
    <string name="city_exception">Введите значение города</string>
    <string name="chislo_exception">Введите численное значение</string>

    <string name="gender_not_stated">Не указано</string>
    <string name="gender_male">Мужской</string>
    <string name="gender_female">Женский</string>


    <string name="title_activity_bottom_navigation">Spochan</string>
    <string name="title_rating">Рейтинг</string>
    <string name="title_news">Главная</string>
    <string name="title_competitions">Календарь мероприятий</string>
    <string name="title_settings">Настройки</string>


    <string name="choose_group">Выберите группу для редактирования: </string>
    <string name="group_1">2012 г.р. и младше</string>
    <string name="group_2">2010–2011</string>
    <string name="group_3">2008–2009</string>
    <string name="group_4">2006–2007</string>
    <string name="group_5">2004–2005</string>
    <string name="group_6">Женщины</string>
    <string name="group_7">Кю</string>
    <string name="group_8">Даны</string>
    <string name="group_9">Ветераны</string>

    <string name="menu_clubs">Клубы</string>
    <string name="menu_help">Задать вопрос</string>
    <string name="menu_communication">Обратная связь</string>
    <string name="menu_ask_developer">Связаться с разработчиком</string>
    <string name="menu_about_developer">О разработчике</string>
    <string name="menu_exit">Выйти из аккаунта</string>

    <string name="competition_title">Заголовок</string>
    <string name="competition_data">Дата проведения</string>
    <string name="competition_location">Город проведения</string>
    <string name="competition_address">Точный адрес</string>
    <string name="address">Адрес:</string>
    <string name="competition_description">Описание</string>
    <string name="competition_registration">Зарегестрироваться на чемпионат </string>
    <string name="competition_reg">Регистрация на чемпионат </string>
    <string name="reg_true">Отобразить </string>
    <string name="reg_false">Скрыть </string>
</resources>