<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_clubs"
        android:title="@string/menu_clubs"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_help"
        android:title="@string/menu_help"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_communication"
        android:title="@string/menu_communication"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_about_developer"
        android:title="@string/menu_about_developer"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_exit"
        android:title="@string/menu_exit"
        app:showAsAction="never"/>


</menu>