<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseGroupForRating"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Выберите группу для редактирования: "
        android:textStyle="italic"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"/>

    <Button
        android:onClick="firstGroup"
        android:layout_marginTop="30dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/group_1"
        android:textColor="@color/White"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"/>

    <Button
        android:onClick="secondGroup"
        android:layout_marginTop="10dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/group_2"
        android:textColor="@color/White"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"/>

    <Button
        android:onClick="thirdGroup"
        android:layout_marginTop="10dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/group_3"
        android:textColor="@color/White"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"/>

    <Button
        android:onClick="forthGroup"
        android:layout_marginTop="10dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/group_4"
        android:textColor="@color/White"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"/>

    <Button
        android:onClick="fifthGroup"
        android:layout_marginTop="10dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/group_5"
        android:textColor="@color/White"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"/>

    <Button
        android:onClick="sixGroup"
        android:layout_marginTop="10dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/group_6"
        android:textColor="@color/White"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"/>

    <Button
        android:onClick="sevenGroup"
        android:layout_marginTop="10dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/group_7"
        android:textColor="@color/White"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"/>

    <Button
        android:onClick="eightGroup"
        android:layout_marginTop="10dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/group_8"
        android:textColor="@color/White"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"/>

</LinearLayout>