<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration.AddMemberOfChampionship"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            app:errorEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userNameEditText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:inputType="text"
                android:hint="@string/first_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:errorEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userSurnameEditText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:inputType="text"
                android:hint="@string/second_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:errorEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userSexEditText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:inputType="text"
                android:hint="@string/sex" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="10">

                <EditText
                    android:id="@+id/daysBornDateEditText"
                    android:layout_weight="2"
                    android:hint="24"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:textSize="20sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:text="."/>

                <EditText
                    android:id="@+id/monthBornDateEditText"
                    android:layout_weight="2"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:textSize="20sp"
                    android:hint="04"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:text="."/>

                <EditText
                    android:id="@+id/yearBornDateEditText"
                    android:layout_weight="4"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:textSize="20sp"
                    android:hint="2003"/>
            </LinearLayout>

            <TextView
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/competition_data" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:errorEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userClubEditText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:inputType="text"
                android:hint="@string/user_club" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <RadioButton
                android:layout_marginLeft="15dp"
                android:onClick="onClickForRadioButtons1"
                android:id="@+id/group_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="@string/group_1"
                android:layout_marginStart="15dp" />

            <RadioButton
                android:layout_marginLeft="15dp"
                android:onClick="onClickForRadioButtons2"
                android:id="@+id/group_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="@string/group_2"
                android:layout_marginStart="15dp" />

            <RadioButton
                android:layout_marginLeft="15dp"
                android:onClick="onClickForRadioButtons3"
                android:id="@+id/group_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="@string/group_3"
                android:layout_marginStart="15dp" />

            <RadioButton
                android:layout_marginLeft="15dp"
                android:onClick="onClickForRadioButtons4"
                android:id="@+id/group_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="@string/group_4"
                android:layout_marginStart="15dp" />

            <RadioButton
                android:layout_marginLeft="15dp"
                android:onClick="onClickForRadioButtons5"
                android:id="@+id/group_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="@string/group_5"
                android:layout_marginStart="15dp" />

            <RadioButton
                android:layout_marginLeft="15dp"
                android:onClick="onClickForRadioButtons6"
                android:id="@+id/group_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="@string/group_6"
                android:layout_marginStart="15dp" />

            <RadioButton
                android:layout_marginLeft="15dp"
                android:onClick="onClickForRadioButtons7"
                android:id="@+id/group_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="@string/group_7"
                android:layout_marginStart="15dp" />

            <RadioButton
                android:layout_marginLeft="15dp"
                android:onClick="onClickForRadioButtons8"
                android:id="@+id/group_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="@string/group_8"
                android:layout_marginStart="15dp" />

            <RadioButton
                android:layout_marginLeft="15dp"
                android:onClick="onClickForRadioButtons9"
                android:id="@+id/group_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="@string/group_9"
                android:layout_marginStart="15dp" />


            <TextView
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_group" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:errorEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userCertificationEditView"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:inputType="text"
                android:hint="@string/user_certification" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="24dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"/>

            <Button
                android:id="@+id/cancelButton"
                style="@style/Button"
                android:onClick="cancelButton"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:text="@string/cancel"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>

            <Button
                android:id="@+id/editButton"
                style="@style/Button"
                android:onClick="addButton"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:text="@string/save"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"/>

        </LinearLayout>

    </LinearLayout>


</ScrollView>